# cyplebrity

./: CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build-container.yml  release.yml  test.yml
cyplebrity/: __init__.py  __main__.py  cyplebrity_model.py
cyplebrity/data/: nerdd.yml
cyplebrity/resources/mm_models/: p450inh_final_1A2_selector.pkl  p450inh_final_2C19_selector.pkl  p450inh_final_2C9_selector.pkl  p450inh_final_2D6_selector.pkl  p450inh_final_3A4_selector.pkl
cyplebrity/resources/nn_models/: p450inh_final_1A2.h5  p450inh_final_2C19.h5  p450inh_final_2C9.h5  p450inh_final_2D6.h5
cyplebrity/util/: create_similarity_dbs.py
tests/: steps.py
tests/features/: consistent_predictions.feature  valid_predictions.feature
tests/steps/: model.py  predictions.py
